# xtl

./: .drone.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  AGENTS.md  BUILD_NINJA.md  C++23_MODERNIZATION.md  C++23_PR_DESCRIPTION.md  C++23_SUGGESTIONS.md  CMakeLists.txt  CMakeLists.txt.gtest  CMakePresets.json  Doxyfile  Doxyfile.in  FIXES_APPLIED.md  LICENSE.md  MODERNIZATION_ANALYSIS.md  MODERNIZATION_SUMMARY.md  PR_DESCRIPTION.md  README.md  analysis_framework.sh  build-ninja.sh  clang_analysis.sh  code_analyzer.py  comprehensive_analysis.sh  cppcheck_results.txt  index.html  run_analysis.sh  sonar-project.properties
.github/: copilot-instructions.md
.github/workflows/: build_and_test.yml
analysis_reports/: ANALYSIS_SUMMARY.md  BUG_REPORT.md  COMPREHENSIVE_ANALYSIS_REPORT.md  COMPREHENSIVE_REPORT.md  FINAL_REPORT.md  README.md  bug_summary.txt  bugs_found.md  build-debug.txt  build_debug.txt  clang-tidy_report.txt  clang-tidy_version.txt  code_analysis_report.json  code_analysis_report.md  code_metrics.txt  cppcheck_report.txt  cppcheck_report.xml  cppcheck_version.txt  cpplint_report.txt  cpplint_version.txt  dynamic_analysis_instructions.txt  performance_instructions.txt  static_analysis.txt
assets/: clang-macros.txt  clang-tidy-suppressions.yaml  cppcheck-suppressions.txt  gcc-6-macros.txt  sonar-project.properties  sonar.json
cmake/: pre-commit
docs/: 01_template_metaprogramming.md  BUILD_INSTRUCTIONS.md  Doxyfile.in  Header-Only-Apps.md  Hierarchy-Generation.md  Parsing.md  README.md  Sockets.md  SpinLock.md  TMP-Techniques.md  Template-Basics.md  Template-Meta-Programming.md  doxylayout.xml  footer.html  header.html  parsing.md  rpc.md
docs/html/: _header-_only-_apps_8md_source.html  _hierarchy-_generation_8md_source.html  _l_i_c_e_n_s_e_8md_source.html  _parsing_8md_source.html  _r_e_a_d_m_e_8md_source.html  _sockets_8md_source.html  _spin_lock_8md_source.html  _t_m_p-_techniques_8md_source.html  _template-_basics_8md_source.html  _template-_meta-_programming_8md_source.html  annotated.html  annotated.js  annotated_dup.js  bag__of__words_8hpp.html  bag__of__words_8hpp_source.html  btree_8hpp.html  btree_8hpp_source.html  callback_8hpp.html  callback_8hpp_source.html  class___super_t.html  classes.html  classmock_1_1xtd_1_1rpc_1_1client_3_01___transport_t_00_01___head_t_00_01___tail_t_8_8_8_01_4.html  classmock_1_1xtd_1_1rpc_1_1client_3_01___transport_t_00_01___head_t_00_01___tail_t_8_8_8_01_4.js  classmock_1_1xtd_1_1rpc_1_1client_3_01___transport_t_01_4.html  classmock_1_1xtd_1_1rpc_1_1client_3_01___transport_t_01_4.js  classmock_1_1xtd_1_1rpc_1_1marshaler.html  classmock_1_1xtd_1_1rpc_1_1marshaler_3_01___skip_by_val_01_4.html  classmock_1_1xtd_1_1rpc_1_1marshaler_3_01___skip_by_val_01_4.js  classmock_1_1xtd_1_1rpc_1_1marshaler_3_01false_00_01___ty_00_01___arg_ts_8_8_8_01_4.html  classmock_1_1xtd_1_1rpc_1_1marshaler_3_01false_00_01___ty_00_01___arg_ts_8_8_8_01_4.js  classmock_1_1xtd_1_1rpc_1_1marshaler_3_01false_00_01___ty_01_6_00_01___arg_ts_8_8_8_01_4.html  classmock_1_1xtd_1_1rpc_1_1marshaler_3_01false_00_01___ty_01_6_00_01___arg_ts_8_8_8_01_4.js  classmock_1_1xtd_1_1rpc_1_1marshaler_3_01true_00_01___ty_00_01___arg_ts_8_8_8_01_4.html  classmock_1_1xtd_1_1rpc_1_1marshaler_3_01true_00_01___ty_00_01___arg_ts_8_8_8_01_4.js  classmock_1_1xtd_1_1rpc_1_1marshaler_3_01true_00_01const_01___ty_01_6_00_01___arg_ts_8_8_8_01_4.html  classmock_1_1xtd_1_1rpc_1_1marshaler_3_01true_00_01const_01___ty_01_6_00_01___arg_ts_8_8_8_01_4.js  classmock_1_1xtd_1_1rpc_1_1marshaler__base.html  classmock_1_1xtd_1_1rpc_1_1marshaler__base_3_01___ty_01_4.html  classmock_1_1xtd_1_1rpc_1_1marshaler__base_3_01___ty_01_4.js  classmock_1_1xtd_1_1rpc_1_1marshaler__base_3_01___ty_07_6_08[___len]_4.html  (+923 more)
docs/images/: logo.xcf
examples/: CMakeLists.txt  dummy_library.cpp  example_btree.cpp  example_callback.cpp  example_dynamic_library.cpp  example_event_trace.cpp  example_exception.cpp  example_logging.cpp  example_mapped_file.cpp  example_mapped_vector.cpp  example_nlp.cpp  example_parse1.cpp  example_parse2.cpp  example_parse_ast.cpp  example_pdf.cpp  example_rfc1035.cpp  example_rfc2229.cpp  example_rpc.cpp  example_sqlite.cpp  example_string.cpp
extra/xtd/: sqlite.hpp
extras/: CMakeLists.txt
extras/build_config/: CMakeLists.txt  xtl.cpp
extras/event_trace/: CMakeLists.txt  event_trace_client.cpp  event_trace_rpc.hpp  event_trace_server.cpp  event_trace_test.cpp  event_trace_test_app.cpp
extras/xtd/: sqlite.hpp
g_tests/: CMakeLists.txt  dummy_library.cpp  test_callback.hpp  test_com.hpp  test_debug_help.hpp  test_dynamic_library.hpp  test_event_trace.hpp  test_exception.hpp  test_lru_cache.hpp  test_mapped_vector.hpp  test_meta.hpp  test_parse.hpp  test_process.hpp  test_recursive_spin_lock.hpp  test_rw_lock.hpp  test_shared_mem_obj.hpp  test_socket.hpp  test_string.hpp  test_unique_id.hpp  test_var.hpp
g_tests/mocks/: rpc.hpp
include/xtd/: btree.hpp  (+49 more)
src/: CMakeLists.txt  xtl.cpp
src/event_trace/: CMakeLists.txt  dbghelp_common.inl  event_trace.cpp  evt_gcc.cpp  evt_gcc.inc  evt_vc32.cpp  evt_vc64.asm
tests/: CMakeLists.txt  btree_test.cpp  callback_test.cpp  com_class_factory_test.cpp  com_data_object_test.cpp  com_dll_test.cpp  com_exception_test.cpp  com_initializer_test.cpp  com_object_test.cpp  com_pointer_test.cpp  com_test.cpp  concurrent_hash_map_test.cpp  concurrent_queue_test.cpp  concurrent_recursive_spin_lock_test.cpp  concurrent_rw_lock_test.cpp  concurrent_spin_lock_test.cpp  concurrent_stack_test.cpp  concurrent_test.cpp  debug_test.cpp  decorated_object_test.cpp  dummy_library.cpp  dynamic_library_test.cpp  dynamic_object_test.cpp  event_trace_test.cpp  exception_test.cpp  executable_test.cpp  filesystem_test.cpp  log_test.cpp  lru_cache_test.cpp  mapped_file_test.cpp  mapped_vector_test.cpp  memory_test.cpp  meta_test.cpp  parse_test.cpp  process_test.cpp  rpc_test.cpp  shared_mem_obj_test.cpp  socket_test.cpp  source_location_test.cpp  string_test.cpp  (+54 more)
tests/mocks/: rpc.hpp
utils/wordnet_importer/: CMakeLists.txt  main.cpp  wordnet.hpp
(+221 files in other folders)
